hystrix demo commit

--- a/Hystrix/ribbon-consumer/src/main/resources/application.properties
+++ b/Hystrix/ribbon-consumer/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-server.port=8080
+server.port=9000
 spring.application.name=hello-customer
 eureka.client.healthcheck.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
