--- a/Feign/feign-consumer/src/main/resources/application.properties
+++ b/Feign/feign-consumer/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.application.name=feign-consumer
 server.port=9001
 
+feign.hystrix.enabled=true
+logging.level.com.longwen.feignconsumer.HelloService=DEBUG
+HELLO-SERVICE.ribbon.ConnectTimeout=500
+HELLO-SERVICE.ribbon.ReadTimeout=2000
+HELLO-SERVICE.ribbon.OkToRetryOnAllOperations=true
+HELLO-SERVICE.ribbon.MaxAutoRetries=2 
+HELLO-SERVICE.ribbon.MaxAutoRetriesNextServer=1
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
