add config info

--- a/Config/config-server/src/main/resources/application.properties
+++ b/Config/config-server/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.application.name=didispace
+spring.application.name=config-server
 server.port=7001
 
-spring.cloud.config.server.git.uri=
-spring.cloud.config.server.git.search-paths=
-spring.cloud.config.server.git.username=
-spring.cloud.config.server.git.password=
+
+
+
+spring.cloud.config.server.git.uri=https://github.com/longwen8/SpringCloudDemo/
+spring.cloud.config.server.git.search-paths=Config/config-repo
+spring.cloud.config.server.git.username=longwen8
+spring.cloud.config.server.git.password=password  #此处为密码
+
